--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -44,22 +44,80 @@
                 app:showAsAction="always|collapseActionView" />
         </androidx.appcompat.widget.Toolbar>
 
+        <LinearLayout
+            android:id="@+id/nosaving"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="visible"
+            app:layout_constraintBottom_toTopOf="@+id/newgoalbtn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar">
+
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/animationView"
+                android:layout_width="300dp"
+                android:layout_height="200dp"
+                android:scaleType="centerCrop"
+                app:lottie_autoPlay="true"
+
+                app:lottie_loop="true"
+                app:lottie_rawRes="@raw/saving_money" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:text="@string/no_saving_goals_set"
+                android:textColor="#1c1c1c"
+                android:textSize="20sp" />
+        </LinearLayout>
+
         <Button
+            android:id="@+id/newgoalbtn"
             android:layout_width="wrap_content"
             android:layout_height="65dp"
             android:layout_gravity="bottom|right"
-            android:textColor="#1c1c1c"
-            android:background="@drawable/newgoalbtnstyle"
-            android:padding="20dp"
             android:layout_marginEnd="32dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginBottom="48dp"
+            android:alpha="0.8"
+            android:background="@drawable/newgoalbtnstyle"
             android:drawableStart="@drawable/ic_baseline_add"
             android:drawablePadding="6dp"
+            android:elevation="10dp"
+            android:padding="20dp"
             android:text="@string/new_goal"
             android:textAllCaps="false"
+            android:textColor="@color/black"
             android:textSize="18sp"
             app:backgroundTint="#bcd2ee"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
+
+        <LinearLayout
+            android:id="@+id/yessaving"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar">
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/familycouplesavingmoney" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/savingsrecycler"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="10dp" />
+        </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
