--- a/app/src/main/res/layout/savingsrecycleritem.xml
+++ b/app/src/main/res/layout/savingsrecycleritem.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="20dp">
+    android:layout_marginBottom="20dp"
+    android:paddingLeft="10dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
@@ -15,6 +16,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="none"
+            android:paddingLeft="10dp"
+            android:text="TextView"
+            android:visibility="gone" />
 
         <ProgressBar
             android:id="@+id/progressBar"
