--- a/app/src/main/res/layout/editpagelayout.xml
+++ b/app/src/main/res/layout/editpagelayout.xml
@@ -66,7 +66,7 @@
                 android:textSize="15sp" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:orientation="vertical">
