--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -61,7 +61,7 @@
                 android:textSize="15sp" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:orientation="vertical">
@@ -110,10 +110,10 @@
                     app:startIconDrawable="@drawable/money_bag">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:inputType="number"
                         android:id="@+id/targetAmount"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:inputType="number" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -132,10 +132,10 @@
                     app:startIconDrawable="@drawable/deadline">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:inputType="date"
                         android:id="@+id/deadline"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:inputType="date" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
