--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -36,7 +36,7 @@
                 android:textSize="22sp" />
 
             <androidx.appcompat.widget.SearchView
-                android:id="@+id/searchview"
+                android:id="@+id/searchView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
