--- a/app/src/main/res/layout/change_username_dialog_layout.xml
+++ b/app/src/main/res/layout/change_username_dialog_layout.xml
@@ -16,17 +16,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:text="@string/cool_enter_amount"
-            android:textColor="@color/black"
-            android:textSize="20sp" />
-
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputEditText9"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -34,21 +23,20 @@
             android:layout_width="330dp"
             android:layout_height="96dp"
             android:layout_gravity="center"
-            android:hint="@string/enter_amount"
+            android:hint="@string/enter_username"
             app:boxCornerRadiusBottomEnd="10dp"
             app:boxCornerRadiusBottomStart="10dp"
             app:boxCornerRadiusTopEnd="10dp"
             app:boxCornerRadiusTopStart="10dp"
             app:boxStrokeColor="#00868b"
             app:endIconMode="clear_text"
-            app:startIconDrawable="@drawable/money_bag">
+            app:startIconDrawable="@drawable/ic_baseline_person_25">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/enteramount"
+                android:id="@+id/enterNewUsername"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:inputType="number" />
+                android:layout_marginBottom="10dp" />
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
