--- a/app/src/main/res/layout/editpagelayout.xml
+++ b/app/src/main/res/layout/editpagelayout.xml
@@ -84,6 +84,7 @@
                     app:boxCornerRadiusBottomStart="10dp"
                     app:boxCornerRadiusTopEnd="10dp"
                     app:boxCornerRadiusTopStart="10dp"
+                    app:boxStrokeColor="#00868b"
                     app:counterMaxLength="20"
                     app:endIconMode="clear_text"
                     app:helperText="Required*"
@@ -109,6 +110,7 @@
                     app:boxCornerRadiusBottomStart="10dp"
                     app:boxCornerRadiusTopEnd="10dp"
                     app:boxCornerRadiusTopStart="10dp"
+                    app:boxStrokeColor="#00868b"
                     app:endIconMode="clear_text"
                     app:helperText="Required*"
                     app:helperTextTextColor="#E40000"
@@ -133,6 +135,7 @@
                     app:boxCornerRadiusBottomStart="10dp"
                     app:boxCornerRadiusTopEnd="10dp"
                     app:boxCornerRadiusTopStart="10dp"
+                    app:boxStrokeColor="#00868b"
                     app:endIconMode="clear_text"
                     app:startIconDrawable="@drawable/deadline">
 
@@ -155,6 +158,7 @@
                     app:boxCornerRadiusBottomStart="10dp"
                     app:boxCornerRadiusTopEnd="10dp"
                     app:boxCornerRadiusTopStart="10dp"
+                    app:boxStrokeColor="#00868b"
                     app:endIconMode="clear_text"
                     app:startIconDrawable="@drawable/write">
 
