--- a/app/src/main/res/layout/savingsrecycleritem.xml
+++ b/app/src/main/res/layout/savingsrecycleritem.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="20dp"
+    android:layout_marginBottom="40dp"
     android:paddingLeft="10dp">
 
     <androidx.cardview.widget.CardView
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -48,6 +49,11 @@
                 android:text="New Laptop"
                 android:textColor="@color/black"
                 android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/textView4"
@@ -97,7 +103,7 @@
                         android:layout_marginEnd="20dp"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="DEPOSIT"
+                        android:text="@string/deposit"
                         android:textColor="@android:color/black"
                         android:textStyle="bold" />
 
@@ -108,7 +114,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:maxLines="1"
-                        android:text="WITHDRAW"
+                        android:text="@string/withdraw"
                         android:textColor="#1c1c1c"
                         android:textStyle="bold" />
 
